--- a/app/src/main/res/layout/frag_index.xml
+++ b/app/src/main/res/layout/frag_index.xml
@@ -5,32 +5,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.ogaclejapan.smarttablayout.SmartTabLayout
+    <com.example.hao.fragmenttest.view.smarttablayout.SmartTabLayout
         android:id="@+id/viewpager_tab"
         app:stl_clickable="true"
         app:stl_defaultTabBackground="?attr/selectableItemBackground"
         app:stl_defaultTabTextAllCaps="true"
-        app:stl_defaultTabTextColor="#FC000000"
+        app:stl_defaultTabTextColor="#76EEC6"
         app:stl_defaultTabTextHorizontalPadding="16dp"
         app:stl_defaultTabTextMinWidth="0dp"
         app:stl_defaultTabTextSize="12sp"
         app:stl_distributeEvenly="false"
-        app:stl_dividerColor="#4D000000"
+        app:stl_dividerColor="#CAE1FF"
         app:stl_dividerThickness="1dp"
         app:stl_drawDecorationAfterTab="false"
         app:stl_indicatorAlwaysInCenter="false"
-        app:stl_indicatorColor="#40C4FF"
+        app:stl_indicatorColor="#00CED1"
         app:stl_indicatorCornerRadius="2dp"
         app:stl_indicatorGravity="bottom"
-        app:stl_indicatorInFront="false"
+        app:stl_indicatorInFront="true"
         app:stl_indicatorInterpolation="smart"
-        app:stl_indicatorThickness="4dp"
+        app:stl_indicatorThickness="3dp"
         app:stl_indicatorWidth="auto"
         app:stl_indicatorWithoutPadding="false"
-        app:stl_overlineColor="#4D000000"
+        app:stl_overlineColor="#EED2EE"
         app:stl_overlineThickness="0dp"
         app:stl_titleOffset="24dp"
-        app:stl_underlineColor="#4D000000"
+        app:stl_underlineColor="#EEE8AA"
         app:stl_underlineThickness="1dp"
         android:layout_width="match_parent"
         android:layout_height="48dp" />
